feat: Cesta de la compra

--- a/backend/templates/catalogo.html
+++ b/backend/templates/catalogo.html
@@ -94,6 +94,9 @@
             <h1 class="title">Catálogo de Productos</h1>
         </div>
         <div class="header-buttons">
+            <a href="{% url 'cart' %}">Ver mi cesta</a>
+        </div>
+        <div class="header-buttons">
             <a href="{% url 'registro' %}">Registrarse</a>
             <a href="{% url 'login' %}">Iniciar sesión</a>
         </div>
