--- a/backend/templates/catalogo.html
+++ b/backend/templates/catalogo.html
@@ -5,7 +5,7 @@
     <title>Catálogo de Productos</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Times New Roman', Times, serif;
             background-color: #f5f5f5;
             margin: 0;
             padding: 20px;
@@ -62,8 +62,9 @@
         }
 
         .header h1 {
-            margin: 0;
-            font-size: 1.5em;
+            font-family: 'Times New Roman', Times, serif;
+            font-size: 1.8em;
+            margin-left: 20px;
         }
 
         .header img.logo {
@@ -71,6 +72,8 @@
             height: 50px;
             border-radius: 50%;
             margin-right: 15px;
+            transform: scale(1.2);
+            transition: transform 0.3s;
         }
 
         .header-buttons {
@@ -127,7 +130,7 @@
     <div class="header">
         <div style="display: flex; align-items: center;">
             {% load static %}
-            <img src="{% static 'images/logo.jpg' %}" alt="Logo de la empresa" class="logo">
+            <img src="{% static 'images/logo.jpg.webp' %}" alt="Logo de la empresa" class="logo">
             <h1 class="title">Catálogo de Productos</h1>
         </div>
         <div class="header-buttons">
