--- a/backend/templates/catalogo.html
+++ b/backend/templates/catalogo.html
@@ -134,8 +134,14 @@
             <h1 class="title">Catálogo de Productos</h1>
         </div>
         <div class="header-buttons">
-            <a href="{% url 'registro' %}">Registrarse</a>
-            <a href="{% url 'login' %}">Iniciar sesión</a>
+            <div class="header-buttons">
+                {% if user.is_authenticated %}
+                    <a href="{% url 'profile' %}" class="user-email">{{ user.email }}</a> <!-- Enlace al perfil -->
+                {% else %}
+                    <a href="{% url 'registro' %}">Registrarse</a>
+                    <a href="{% url 'login' %}">Iniciar sesión</a>
+                {% endif %}
+            </div>
         </div>
     </div>
 
