Feature: Email de confirmación

--- a/backend/templates/cart.html
+++ b/backend/templates/cart.html
@@ -140,7 +140,7 @@
 
         <div class="cart-actions">
             <a href="{% url 'catalogo' %}">Seguir comprando</a>
-            <a href="#">Finalizar compra</a> 
+            <a href="{% url 'finalizar_compra' %}">Finalizar compra</a>
         </div>
     </div>
 </body>
