--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +15,7 @@
             margin: 0;
             background-color: #f5f5f5;
         }
+
         .container {
             text-align: center;
             padding: 20px;
@@ -21,12 +23,15 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
+
         h1 {
             color: #000000;
         }
+
         p {
             color: #666;
         }
+
         .button {
             margin-top: 20px;
             padding: 10px 20px;
@@ -38,25 +43,31 @@
             font-size: 16px;
             cursor: pointer;
         }
+
         .button:hover {
             background-color: #0056b3;
         }
+
         .logo {
             display: block;
-            margin: 10px auto; /* Centrado y espacio arriba/abajo */
-            width: 200px; /* Ajustar el ancho del logo */
-            height: auto; /* Mantener la proporción */
+            margin: 10px auto;
+            /* Centrado y espacio arriba/abajo */
+            width: 200px;
+            /* Ajustar el ancho del logo */
+            height: auto;
+            /* Mantener la proporción */
         }
-
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>Bienvenido a JMDP<sup>2</sup> Dynamics</h1>
         {% load static %}
         <img src="{% static 'images/logo.jpg.webp' %}" alt="Logo de la empresa" class="logo">
         <p>Aquí podrá acceder a los productos disponibles</p>
-        <a href="/catalogo" class="button">Ir a Catálogo</a>
+        <a href="{% url 'catalogo' %}" class="button">Ir a Catálogo</a>
     </div>
 </body>
+
 </html>
